# cliparse

./: AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cliparse/: __init__.py  args.py  config.py  logging.py
tests/: test_args.py  test_config.py  test_imports.py  test_logging.py
