[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cliparse"
version = "0.1.0"
description = "CLI config boilerplate with argparse and logging integration"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Josh Wren" }]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["cliparse"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=cliparse",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=96",
]

[tool.coverage.run]
source = ["cliparse"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "D", "ANN401"]
ignore = ["D203", "D213", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["cliparse", "tests"]
exclude = ["**/node_modules", "**/__pycache__", ".venv"]
venvPath = "."
venv = ".venv"
